# converter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SKILLS.md
examples/: basic_conversion.rs
src/: converter.rs  error.rs  formats.rs  lib.rs
src/converters/: docx_markdown.rs  excel.rs  ico.rs  mod.rs  pdf.rs  word.rs
src/converters/markdown/: markdown2pdf_converter.rs  mod.rs
src/markdown2pdf/: config.rs  debug.rs  markdown.rs  mod.rs  pdf.rs  validation.rs
tests/: integration_tests.rs
