[package]
name = "file_converter"
version = "0.1.0"
edition = "2021"
description = "A Rust-based file converter crate for converting between Word, Excel, PDF, and Markdown formats"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/file_converter"
keywords = ["converter", "word", "excel", "pdf", "markdown"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime (optional, for future enhancements)
tokio = { version = "1.35", features = ["full"], optional = true }

# Word document processing (docx)
docx-rs = "0.4"
zip = "0.6"

# Excel processing
calamine = "0.23"

# PDF processing
lopdf = "0.31"

# Markdown processing
pulldown-cmark = "0.9"

# HTML processing (for intermediate conversion)
html5ever = "0.26"
markup5ever_rcdom = "0.2"

# File type detection
infer = "0.15"

# Logging
log = "0.4"
env_logger = "0.10"

# Path handling
path-absolutize = "3.1"

[dev-dependencies]
tempfile = "3.9"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "file_converter"
path = "src/bin/file_converter.rs"

[features]
default = []
async = ["tokio"]
